<resources>
    <string name="app_name">CoopFit</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_login">CoopFit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation">CoopFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sincronizar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bem_vindo">Bem vindo,</string>
    <string name="user_name">Usuário</string>
    <string name="altura">Altura </string>
    <string name="peso">Peso </string>
    <string name="sentido">Como você está se sentido?</string>
    <string name="locomocao">Qual meio de locomoção utilizado hoje?</string>
    <string name="quais_frutas">De quais frutas se alimentou hoje?</string>
    <string name="qtd_copos_agua">Quantos copos de água tomou hoje?</string>
    <string name="salvar">Salvar</string>
    <string name="enviar">Enviar</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="sair">Sair</string>
    <string name="lembrar">Lembrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="digite_seu_email">Digite seu e-mail</string>
    <string name="observacoes">Observações</string>


    <string-array name="array_meio_locomocao">
        <item>Selecione uma opção</item>
        <item>Veículo Próprio</item>
        <item>Transporte Público</item>
        <item>Bicicleta</item>
        <item>Caminhada</item>
    </string-array>

    <string-array name="array_situacao">
        <item>Selecione uma opção</item>
        <item>Feliz</item>
        <item>Triste</item>
        <item>Chateado(a)</item>
        <item>Cansado(a)</item>
    </string-array>

    <string-array name="array_genero">
        <item>Selecione seu gênero</item>
        <item>Feminino</item>
        <item>Masculino</item>
        <item>Outros</item>
    </string-array>

</resources>
