<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qtd_copos_agua"
        android:textColor="#000000"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true"
        android:id="@+id/txtQtdCopoAgua"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quais_frutas"
        android:layout_marginTop="30dp"
        android:textColor="#000000"
        android:textStyle="bold"
        />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:id="@+id/txtQtdFruta"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locomocao"
        android:layout_marginTop="30dp"
        android:textColor="#000000"
        android:textStyle="bold"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/array_meio_locomocao"
        android:id="@+id/txtMeioLocomocao"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sentido"
        android:layout_marginTop="30dp"
        android:textColor="#000000"
        android:textStyle="bold"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/array_situacao"
        android:layout_marginTop="10dp"
        android:id="@+id/txtSentimento"
        />

    <Button
        android:id="@+id/btn_enviar"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@color/colorTheme"
        android:textStyle="bold"
        android:text="@string/salvar"
        android:onClick="saveQuiz"
        android:textSize="15dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>